# fluentlish

./: .gitignore  README.md  app.js  pyproject.toml  requirements.txt  start_bot.py
bot/database/: create_db.py  queries.py
bot/handlers/: callbacks.py  commands.py  payment.py  user_message.py
bot/keyboards/: inline_keyboards.py  reply_keyboards.py
bot/services/: change_dict.py  check_sentence.py  formatting.py  gpt.py  parser_cambridge.py  word_selector.py
tests/: test.py
